# mealie-mcp-server

./: .env.example  .gitignore  Containerfile  DEPLOYMENT_COMPLETE.md  NEXT_STEPS.md  README.md  compose.yaml  pyproject.toml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: auth0-enhancement.md
config/: README.md
docs/: DEPLOYMENT.md  FASTMCP_OAUTH_SETUP.md  MULTI_USER_SETUP.md  MULTI_USER_SETUP.md.old  OAUTH_SETUP.md  PODMAN_DEPLOYMENT.md  QUICKREF_OAUTH.md  QUICKSTART_MULTI_USER.md  TAILSCALE_OAUTH_SETUP.md
oauth/: README.md  hydra.yml
oauth/consent-ui/: Dockerfile  app.py
scripts/: deploy-multi-user.sh  mealie-mcp-fraser.service  mealie-mcp-sam.service  mealie-mcp.service  setup-server.sh
scripts/bulk_import_hellofresh/: LLM_OCR_README.md  __init__.py  batch_llm_ocr.py  cli.py  fast_llm_ocr.py  importer.py  matcher.py  ocr.py  ocr_llm.py  quick_llm_test.py  sitemap.py  test_dedup.py  test_llm_ocr.py
scripts/bulk_import_hellofresh/.cache/: sitemap_au.json  sitemap_de.json  sitemap_uk.json  sitemap_us.json
scripts/bulk_import_hellofresh/qa/: __init__.py  measurements.py  nutrition.py  runner.py  tagging.py
src/mealie_mcp/: __init__.py  client.py  context.py  models.py  server.py  user_tokens.py
src/mealie_mcp/auth/: __init__.py  multi_user_oauth.py  validator.py
src/mealie_mcp/portal/: __init__.py  app.py  rules.py
src/mealie_mcp/tools/: __init__.py  mealplans.py  planning_rules.py  recipes.py  recipes_write.py  shopping.py
src/mealie_mcp/transports/: __init__.py  streamable_http.py
tests/: __init__.py  test_client.py  test_mealplans.py  test_recipes.py  test_shopping.py
