[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mealie-mcp"
version = "0.1.0"
description = "MCP server for Mealie recipe management integration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Fraser Gibbs" }
]
keywords = ["mcp", "mealie", "recipes", "meal-planning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.3.0",
]

[project.scripts]
mealie-mcp = "mealie_mcp.server:main"
mealie-mcp-portal = "mealie_mcp.portal.app:run_portal"

[tool.hatch.build.targets.wheel]
packages = ["src/mealie_mcp"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["mealie_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
